--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - arm-none-eabi-gcc
+    - gcc-arm-none-eabi
 script:
 - make
